# zkpoor

./: .gitignore  README.md  demo-utxos.json  demo-utxos.md
app/: page.tsx
app/api/proof-verify/: route.ts
app/api/proof/[proof_id]/: route.ts
app/api/prove/: route.ts
app/styles/: main.css
app/treasury-manager/: page.tsx
app/verify/: page.tsx
docs/: demo-plan.md  utxos-candidates.md
docs/zkpoor/: PRESENTATION.md  package.json  slides.md
program/: Makefile
program/scripts/: format_args.py  generate_data.py  prove.py  prove_pow.py
program/src/: lib.cairo
program/tests/data/: program-input.json
scripts/: README.md  find-demo-utxos.js
wasm-backend/: Cargo.toml
wasm-backend/src/: lib.rs
